--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -12,4 +12,5 @@
 
     <string name="submit">Submit</string>
     <string name="popMovies">The most popular movies of</string>
+    <string name="overview">overview</string>
 </resources>
